# GitVibes

./: .env.example  .gitignore  README.md  docker-compose.yml  rename-frontend.sh
gitvibe-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml  requirements.txt  test_repo.py
gitvibe-backend/app/: main.py
gitvibe-backend/app/api/v1/: api.py
gitvibe-backend/app/core/: config.py
gitvibe-backend/app/endpoints/: analyze.py  github.py  roast.py  search.py
gitvibe-backend/app/services/: github_service.py
gitvibe-backend/tests/: test_api.py
gitvibe-next/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
gitvibe-next/src/app/: Home.tsx  globals.css  layout.tsx
gitvibe-next/src/app/api/: roast.ts  search.ts
gitvibe-next/src/app/api/roast/: route.ts
gitvibe-next/src/app/repo/[owner]/[repo]/: page.tsx
gitvibe-next/src/components/: Navbar.tsx  SearchBox.tsx  ThemeToggle.tsx  VibeScoreProgress.tsx
gitvibe-next/src/context/: ThemeContext.tsx
